feat: added string trimming for all string input